Adjustment to the Launcher Icon
Signed-off-by: Leo-Chan01 <ephraimleo16@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">One e-Shop</string>
+    <string name="app_name">S-Mart</string>
     <string name="title_activity_edit_deal">Edit and Add</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
